--- a/Seasonality.ipynb
+++ b/Seasonality.ipynb
@@ -41,6 +41,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -95,6 +102,13 @@
     "xcroods = [\"01-01-2000\",\"01-01-2001\",\"01-01-2002\",\"01-01-2003\",\"01-01-2004\",\"01-01-2005\"]\n",
     "for xc in xcroods:\n",
     "    plt.axvline(x = xc,color=\"black\", linestyle = \"-.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seasonality check"
    ]
   },
   {
