--- a/Seasonality.ipynb
+++ b/Seasonality.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seasonality check"
+    "**Seasonality check**"
    ]
   },
   {
