--- a/Seasonality.ipynb
+++ b/Seasonality.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Course+DataSet.csv\", index_col=\"DATE\",parse_dates= True)"
+    "data = pd.read_csv(\"DataSet.csv\", index_col=\"DATE\",parse_dates= True)"
    ]
   },
   {
