--- a/Seasonality.ipynb
+++ b/Seasonality.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
        "<Axes: xlabel='DATE'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +138,58 @@
     "xcroods = [\"01-01-2000\",\"01-01-2001\",\"01-01-2002\",\"01-01-2003\",\"01-01-2004\",\"01-01-2005\"]\n",
     "for xc in xcroods:\n",
     "    plt.axvline(x = xc,color=\"black\", linestyle = \"-.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stationarity Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stationarity_test(series):\n",
+    "    result = adfuller(series,autolag = \"AIC\")\n",
+    "    label = [\"Stationarity statistic\", \"p-value\",\"#lag used\",\"#observation\"]\n",
+    "    out = pd.Series(result[0:4],index=label)\n",
+    "    print(out.to_string())\n",
+    "    if(result[1] <= 0.05):\n",
+    "        print(\"Data has no unit root and stationary\")\n",
+    "    else:\n",
+    "        print(\"Data has unit root and non-stationary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stationarity statistic     -2.256990\n",
+      "p-value                     0.186215\n",
+      "#lag used                  15.000000\n",
+      "#observation              381.000000\n",
+      "Data has unit root and non-stationary\n"
+     ]
+    }
+   ],
+   "source": [
+    "stationarity_test(data[\"Price\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Auto Correlation**"
    ]
   },
   {
